<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) ffem (Foundation for Environmental Monitoring)
  ~
  ~ This file is part of ffem reports
  ~
  ~ ffem Reports is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ ffem Reports is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ffem Reports. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="info"
            type="io.ffem.reports.model.WaterTestInfo" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="#ddd"
            tools:ignore="UnknownIdInLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="90dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clickable="false"
                        android:columnCount="2"
                        android:focusable="false"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".60"
                            android:padding="8dp"
                            android:text="@string/lake"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".40"
                            android:gravity="end"
                            android:padding="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@{info.lake}"
                            android:textSize="17sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F7F7F7"
                        android:clickable="false"
                        android:columnCount="2"
                        android:focusable="false"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".6"
                            android:padding="8dp"
                            android:text="@string/location"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@{info.location}"
                            android:textSize="17sp" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:paddingStart="8dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
                    android:text="@string/test_results"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clickable="false"
                        android:columnCount="2"
                        android:focusable="false"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".70"
                            android:padding="8dp"
                            android:text="@string/nitrogen"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".30"
                            android:gravity="end"
                            android:padding="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@{info.nitrateResult}"
                            android:textSize="17sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F7F7F7"
                        android:clickable="false"
                        android:columnCount="2"
                        android:focusable="false"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:padding="8dp"
                            android:text="@string/phosphorus"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@{info.phosphateResult}"
                            android:textSize="17sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:columnCount="2"
                        android:focusable="false"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:padding="8dp"
                            android:text="@string/potassium"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@{info.pHResult}"
                            android:textSize="17sp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            style=" ?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ccc"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/buttonPrint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPrintClick"
                android:padding="20dp"
                android:text="@string/print"
                android:textColor="?primaryButtonColor"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSaveClick"
                android:padding="20dp"
                android:text="@string/save"
                android:textColor="?primaryButtonColor"
                android:textSize="17sp"
                android:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>
</layout>